--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Survey Helper</title>
     <link href="CSS/styles.css" rel="stylesheet">
+    <script type="application/javascript" src="js/home.js"></script>
 </head>
 <body id="homePage">
     <!-- MUST FIGURE A WAY TO DO SIDE BANNER WITH CSS-->
