--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <img src="images/rsz_surveyicon.png" alt="Icono de encuesta (A CAMBIAR)" class="centerContainer">
         <!-- PUT IN USER NICKNAME -->
         <!-- https://stackoverflow.com/questions/40525339/how-can-i-display-a-variable-content-in-html -->
-        <h4 class="sideBannerElement">User</h4>
+        <h4 id="User" class="sideBannerElement">User</h4>
         <!-- PUT SURVEY NUMBER -->
         <!-- MAYBE WE COULD DO IT WITH A SCRIPT THAT CREATES THIS WHOLE THING -->
         <!-- Like, put an id to a span in here or the div itself and create the structure somewhere else -->
